Correct layout on smaller desktop window for classroom in a box

--- a/app/styles/home-view.sass
+++ b/app/styles/home-view.sass
@@ -125,18 +125,18 @@
           width: 100%
 
     #classroom-in-box-row
-      height: 515px
       padding: 60px 40px
 
       h3, .text-p
         color: white
         @media (max-width: $screen-lg-min)
           padding-top: 20px
-
+      .vid-link
+        text-align: center
       .video-thumbnail
         img
+          max-height: 364px
           max-width: 100%
-          max-height: 100%
 
     .open-video-btn.video-text
       color: inherit
